tests/lime/fail/tokens/label_rest/byte_92.wsa
jmp .l\ .l\: push 92
